--- a/servicios/index.html
+++ b/servicios/index.html
@@ -201,7 +201,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingFive">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-              Revisión Externa Indepente
+              Revisión Externa Independiente
             </button>
           </h2>
           <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
@@ -260,7 +260,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingSeven">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
-              Diagnostico/Plan Accion 
+              Diagnostico/Plan Acción 
             </button>
           </h2>
           <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlushExample">
