--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         Industrias
       </span>
       <article class="accesoIndustrias w90 mw900 centrado flex fontTitulo w90-mobile">
-        <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont1">Sistema Financiero</span>
+        <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont1">Sistema Financiero y Seguros</span>
         <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont2">Banca Digital</span>
         <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont3">Mercado de capitales</span>
         <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont4">Economía Real</span>
@@ -54,7 +54,7 @@
         <span class="accesoServicios--bloque accesoServicios--bloque_cont1">Revisión Externa<br>Independiente - PLA/FT</span>
         <span class="accesoServicios--bloque accesoServicios--bloque_cont2">Herramientas de<br>Gestión de Riesgos</span>
         <span class="accesoServicios--bloque accesoServicios--bloque_cont3">Asesoramiento integral<br>y permanente - PLA/FT</span>
-        <span class="accesoServicios--bloque accesoServicios--bloque_cont4">Tendencias</span>
+        <span class="accesoServicios--bloque accesoServicios--bloque_cont4">Programa de Integridad y Prevención de Fraude</span>
         <span class="accesoServicios--bloque accesoServicios--bloque_cont5">Diagnostico /<br>Planes de Accion</span>
         <span class="accesoServicios--bloque accesoServicios--bloque_cont6">Capacitaciones</span>
       </article>
