--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -216,8 +216,8 @@
     
 
   <section id="bloqueLinks" class="d-flex w90 mw1080 fontTitulo">
-    <a href="/profesionales" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoProfesionales.png')">Nuestros Profesionales</a>
-    <a href="/clientes" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoServicios.png')">Nuestros Servicios</a>
+    <a href="../profesionales" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoProfesionales.png')">Nuestros Profesionales</a>
+    <a href="../clientes" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoServicios.png')">Nuestros Servicios</a>
   </section>
 
   <section id="bloqueContacto">
