--- a/profesionales/index.html
+++ b/profesionales/index.html
@@ -109,8 +109,8 @@
   </section>
 
   <section id="bloqueLinks" class="d-flex w90 mw1080 fontTitulo">
-    <a href="/servicios" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoServicios.png')">Nuestros Servicios</a>
-    <a href="/clientes" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoClientes.png')">Nuestros Clientes</a>
+    <a href="../servicios" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoServicios.png')">Nuestros Servicios</a>
+    <a href="../clientes" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoClientes.png')">Nuestros Clientes</a>
   </section>
 
   <section id="bloqueContacto">
