--- a/servicios/index.html
+++ b/servicios/index.html
@@ -324,8 +324,8 @@
     
 
   <section id="bloqueLinks" class="d-flex w90 mw1080 fontTitulo">
-    <a href="/profesionales" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoProfesionales.png')">Nuestros Profesionales</a>
-    <a href="/clientes" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoClientes.png')">Nuestros Clientes</a>
+    <a href="../profesionales" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoProfesionales.png')">Nuestros Profesionales</a>
+    <a href="../clientes" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoClientes.png')">Nuestros Clientes</a>
   </section>
 
   <section id="bloqueContacto">
