Actualizaciones Varias del sitio

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/fidesnet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +24,7 @@
       </p>
     </span>
 
-      <article class="contenidoEncabezado centrado w90 mw1080">
+      <article class="contenidoEncabezado centrado w90 mw1080" data-aos="fade-up" data-aos-duration="1000">
         <p class="textoEncabezado fontTexto">
           El término en latín FIDES – fe y confianza – alude a la virtud tradicional que es materia prima esencial de los negocios y es la que nos proponemos suscitar en nuestros clientes dando pruebas de experiencia, calidad de los servicios, conocimientos y dedicación.
           <br><br>
@@ -33,54 +34,43 @@
       </article>
     </section>
 
-    <section id="accesoIndustrias" class="centrado">
-      <span class="titulo fontTitulo colorDestacado">
-        Industrias
-      </span>
-      <article class="accesoIndustrias w90 mw900 centrado flex fontTitulo w90-mobile">
-        <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont1">Sistema Financiero y Seguros</span>
-        <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont2">Banca Digital</span>
-        <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont3">Mercado de capitales</span>
-        <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont4">Economía Real</span>
-      </article>
+    <section id="accesoIndustrias" class="centrado" data-aos="fade-up" data-aos-duration="2500">
+      <a id="link" class="colorTexto" href="servicios">
+        <span class="titulo fontTitulo colorDestacado">
+          Industrias
+        </span>
+        <article class="accesoIndustrias w90 mw900 centrado flex fontTitulo w90-mobile">
+          <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont1" data-aos="fade-up" data-aos-duration="2800">Sistema Financiero y Seguros</span>
+          <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont2" data-aos="fade-up" data-aos-duration="2800">Banca Digital</span>
+          <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont3" data-aos="fade-up" data-aos-duration="2900">Mercado de capitales</span>
+          <span class="accesoIndustrias--bloque accesoIndustrias--bloque_cont4" data-aos="fade-up" data-aos-duration="2900">Economía Real</span>
+        </article>
+      </a>
     </section>
 
 
-    <section id="accesoIndustrias" class="centrado">
-      <span class="titulo fontTitulo">
-        Nuestros <span class="colorDestacado">Servicios</span>
-      </span>
-      <article class="accesoServicios w90 mw900 centrado flex fontTitulo w90-mobile">
-        <span class="accesoServicios--bloque accesoServicios--bloque_cont1">Revisión Externa<br>Independiente - PLA/FT</span>
-        <span class="accesoServicios--bloque accesoServicios--bloque_cont2">Herramientas de<br>Gestión de Riesgos</span>
-        <span class="accesoServicios--bloque accesoServicios--bloque_cont3">Asesoramiento integral<br>y permanente - PLA/FT</span>
-        <span class="accesoServicios--bloque accesoServicios--bloque_cont4">Programa de Integridad y Prevención de Fraude</span>
-        <span class="accesoServicios--bloque accesoServicios--bloque_cont5">Diagnostico /<br>Planes de Accion</span>
-        <span class="accesoServicios--bloque accesoServicios--bloque_cont6">Capacitaciones</span>
-      </article>
+    <section id="accesoIndustrias" class="centrado" data-aos="fade-up" data-aos-duration="2500">
+      <a id="link" class="colorTexto" href="servicios#Nuestros-Servicios">
+        <span class="titulo fontTitulo">
+          Nuestros <span class="colorDestacado">Servicios</span>
+        </span>
+        <article class="accesoServicios w90 mw900 centrado flex fontTitulo w90-mobile">
+          <span class="accesoServicios--bloque accesoServicios--bloque_cont1">Revisión Externa<br>Independiente - PLA/FT</span>
+          <span class="accesoServicios--bloque accesoServicios--bloque_cont2">Herramientas de<br>Gestión de Riesgos</span>
+          <span class="accesoServicios--bloque accesoServicios--bloque_cont3">Asesoramiento integral<br>y permanente - PLA/FT</span>
+          <span class="accesoServicios--bloque accesoServicios--bloque_cont4">Programa de Integridad<br> y Prevención de Fraude</span>
+          <span class="accesoServicios--bloque accesoServicios--bloque_cont5">Diagnostico /<br>Planes de Accion</span>
+          <span class="accesoServicios--bloque accesoServicios--bloque_cont6">Capacitaciones</span>
+        </article>
+      </a>
     </section>
   
     <section id="publicacionesDestacadas" class="centrado fondoGris">
-      <span class="w90 mw1080">
-        <span class="titulo">
-          Publicaciones <span class="colorDestacado">Destacadas</span>
-        </span>
-        <span class="contenedorNotas centrado w90 mw900 fontTexto">
-          <span class="contenedorNota-bloque">
-            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
-              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
-            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <span class="nota-seguirLeyendo"> >seguir Leyendo</span>
-          </span>
-
-          <span class="contenedorNota-bloque">
-            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
-              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
-            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <span class="nota-seguirLeyendo"> > seguir leyendo</span>
-          </span>
-        </span>
+      <span class="titulo">
+        Publicaciones <span class="colorDestacado">Destacadas</span>
       </span>
+      <span id="publicacionesDestacadas--contenido"></span>
+      <button class="botonFides fontTexto" type="button" onclick="location.href='../notas'">VER MÁS</button>
     </section>
 
     <section id="bloqueContacto">
@@ -90,11 +80,14 @@
 
     <footer id="bloqueFooter">
     </footer>
-    
-    <script src="" async defer></script>
     <script src="js/menu.js"></script>
+    <script src="../js/publicacionesDestacadas.js"></script>
     <script src="js/contacto.js"></script>
     <script src="js/footer.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
