--- a/profesionales/index.html
+++ b/profesionales/index.html
@@ -24,63 +24,63 @@
       </p>
     </span>
 
-      <article class="contenidoEncabezado centrado w90 mw900 mb-5">
+      <article class="contenidoEncabezado centrado w90 mw900 mb-5" data-aos="fade-up" data-aos-duration="1000">
         <p class="textoEncabezado fontTexto">
           Nuestro staff está integrado por profesionales de diferentes disciplinas, con vasta experiencia en la gestión de riesgos regulatorios y en el diseño e implementación de estructuras de Compliance.
         </p> 
       </article>
     </section>
 
-    <section class="bloqueProfesionales centrado w90 mw1080 mb-5 d-flex justify-content-between align-items-center">
-      <div class="accesoProfesional d-flex flex-column align-items-center">
+    <section class="bloqueProfesionales centrado w90 mw1080 mb-5 d-flex justify-content-between align-items-center" data-aos="fade-up" data-aos-duration="3000">
+      <div class="accesoProfesional d-flex flex-column align-items-center" data-aos="fade-up" data-aos-duration="1000">
         <a href="#infoCvProfesional" onclick="perfilZocco()">
           <span><img src="../images/perfilZocco.png" alt=""></span>
           <div class="accesoProfesional--nombre fontTitulo colorDestacado">MG. Guillermo Zocco Vidal</div>
           <div class="accesoProfesional--cargo fontTexto">SOCIO FUNDADOR</div>
         </a>
         <div class="accesoProfesional--links d-flex">
-          <a href="https://www.linkedin.com/in/guillermo-zocco-vidal-69baa625/" target="_blank"><img src="../images/ic-profesional-mail.png"></a>
+          <a href="mailto:guillermo.zocco@fidesnet.com.ar" target="_blank"><img src="../images/ic-profesional-mail.png"></a>
           <a href="https://www.linkedin.com/in/guillermo-zocco-vidal-69baa625/" target="_blank"><img src="../images/ic-profesional-in.png"></a>
           <a href="#infoCvProfesional" onclick="perfilZocco()"><img src="../images/ic-profesional-cv.png"></a>
         </div>
       </div>
 
-      <div class="accesoProfesional d-flex flex-column align-items-center">
+      <div class="accesoProfesional d-flex flex-column align-items-center" data-aos="fade-up" data-aos-duration="1500">
         <a href="#infoCvProfesional" onclick="perfilKores()">
           <span><img src="../images/perfilKores.png" alt=""></span>
           <span class="accesoProfesional--nombre fontTitulo colorDestacado">MG. Andrés Kores</span>
           <div class="accesoProfesional--cargo fontTexto">SOCIO FUNDADOR</div>
         </a>
         <div class="accesoProfesional--links d-flex">
-          <a href="https://www.linkedin.com/in/guillermo-zocco-vidal-69baa625/" target="_blank"><img src="../images/ic-profesional-mail.png"></a>
-          <a href="https://www.linkedin.com/in/guillermo-zocco-vidal-69baa625/" target="_blank"><img src="../images/ic-profesional-in.png"></a>
+          <a href="mailto:andres.kores@fidesnet.com.ar" target="_blank"><img src="../images/ic-profesional-mail.png"></a>
+          <a href="https://www.linkedin.com/in/andres-kores-5b314343/" target="_blank"><img src="../images/ic-profesional-in.png"></a>
           <a href="#infoCvProfesional" onclick="perfilKores()"><img src="../images/ic-profesional-cv.png"></a>
         </div>
       </div>      
 
-      <div class="accesoProfesional d-flex flex-column align-items-center">
+      <div class="accesoProfesional d-flex flex-column align-items-center" data-aos="fade-up" data-aos-duration="2000">
         <a href="#infoCvProfesional" onclick="perfilPasquale()">
           <span><img src="../images/perfilPasquale.png" alt=""></span>
           <span class="accesoProfesional--nombre fontTitulo colorDestacado">MG. Fernando Di Pasquale</span>
           <div class="accesoProfesional--cargo fontTexto">SOCIO FUNDADOR</div>
         </a>
         <div class="accesoProfesional--links d-flex">
-          <a href="https://www.linkedin.com/in/guillermo-zocco-vidal-69baa625/" target="_blank"><img src="../images/ic-profesional-mail.png"></a>
-          <a href="https://www.linkedin.com/in/guillermo-zocco-vidal-69baa625/" target="_blank"><img src="../images/ic-profesional-in.png"></a>
+          <a href="mailto:fernando.dipasquale@fidesnet.com.ar" target="_blank"><img src="../images/ic-profesional-mail.png"></a>
+          <a href="https://www.linkedin.com/in/fernando-di-pasquale-6489a941/" target="_blank"><img src="../images/ic-profesional-in.png"></a>
           <a href="#infoCvProfesional" onclick="perfilPasquale()"><img src="../images/ic-profesional-cv.png"></a>
         </div>
       </div>   
       
 
-      <div class="accesoProfesional d-flex flex-column align-items-center">
+      <div class="accesoProfesional d-flex flex-column align-items-center" data-aos="fade-up" data-aos-duration="2500">
         <a href="#infoCvProfesional" onclick="perfilCapellades()">
-          <span><img src="../images/perfilAgustina.png" alt=""></span>
+          <span><img src="../images/perfilAgustina2.png" alt=""></span>
           <span class="accesoProfesional--nombre fontTitulo colorDestacado">M. Agustina Capellades</span>
           <div class="accesoProfesional--cargo fontTexto">DIRECTORA</div>
         </a>
         <div class="accesoProfesional--links d-flex">
-          <a href="https://www.linkedin.com/in/guillermo-zocco-vidal-69baa625/" target="_blank"><img src="../images/ic-profesional-mail.png"></a>
-          <a href="https://www.linkedin.com/in/guillermo-zocco-vidal-69baa625/" target="_blank"><img src="../images/ic-profesional-in.png"></a>
+          <a href="mailto:agustina.capellades@fidesnet.com.ar" target="_blank"><img src="../images/ic-profesional-mail.png"></a>
+          <a href="https://www.linkedin.com/in/m-agustina-capellades-cams-aa1ab910b/" target="_blank"><img src="../images/ic-profesional-in.png"></a>
           <a href="#infoCvProfesional" onclick="perfilCapellades()"><img src="../images/ic-profesional-cv.png"></a>
         </div>
       </div>  
@@ -89,7 +89,7 @@
     </section>
 
     
-  <section id="infoCvProfesional" class="fontTexto">
+  <section id="infoCvProfesional" class="fontTexto" data-aos="fade-up" data-aos-duration="1000">
     <span class="contenidoCV w90 mw900 centrado d-flex">
       <span class="imagenCV">
         <img src="../images/perfilZocco.png" alt="">
@@ -108,9 +108,9 @@
     </span>
   </section>
 
-  <section id="bloqueLinks" class="d-flex w90 mw1080 fontTitulo">
-    <a href="../servicios" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoServicios.png')">Nuestros Servicios</a>
-    <a href="../clientes" class="bloqueLinks-acceso" style="background-image:url('../images/fondoAccesoClientes.png')">Nuestros Clientes</a>
+  <section id="bloqueLinks" class="d-flex w90 mw1080 fontTitulo" data-aos="zoom-out" data-aos-duration="1000">
+    <a href="../servicios" class="bloqueLinks-acceso" data-aos="fade-up" data-aos-duration="2000" style="background-image:url('../images/fondoAccesoServicios.png')">Nuestros Servicios</a>
+    <a href="../clientes" class="bloqueLinks-acceso" data-aos="fade-up" data-aos-duration="2000" style="background-image:url('../images/fondoAccesoClientes.png')">Nuestros Clientes</a>
   </section>
 
   <section id="bloqueContacto">
@@ -127,6 +127,9 @@
     <script src="../js/contacto.js"></script>
     <script src="../js/footer.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
