--- a/notas/template.html
+++ b/notas/template.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,500&family=Open+Sans:ital,wght@0,300;0,400;700;0,800;1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/fidesnet.css">
+    <link rel="stylesheet" href="https://alvaroguzmandg.github.io/fidesNet/styles/fidesnet.css">
   </head>
   <body>
     <header id="menuHeader" class="centrado fontTexto">
