--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <footer id="bloqueFooter">
     </footer>
     <script src="js/menu.js"></script>
-    <script src="../js/publicacionesDestacadas.js"></script>
+    <script src="js/publicacionesDestacadas.js"></script>
     <script src="js/contacto.js"></script>
     <script src="js/footer.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
