--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         Publicaciones <span class="colorDestacado">Destacadas</span>
       </span>
       <span id="publicacionesDestacadas--contenido"></span>
-      <button class="botonFides fontTexto" type="button" onclick="location.href='../notas'">VER MÁS</button>
+      <button class="botonFides fontTexto" type="button" onclick="location.href='/notas'">VER MÁS</button>
     </section>
 
     <section id="bloqueContacto">
