--- a/clientes/index.html
+++ b/clientes/index.html
@@ -22,9 +22,9 @@
 
 
     <section id="photoHeader">
-      <span class="headerNosotros">
+      <span class="headerClientes">
       <p class="textoHeader fontDestacado">
-        Sobre Nosotros
+        Nuestros Clientes
       </p>
     </span>
 
