--- a/notas/index.html
+++ b/notas/index.html
@@ -76,9 +76,30 @@
             <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
             <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
           </span>
+
+          <span class="contenedorNota-bloque">
+            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
+              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
+            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
+            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+          </span>
+
+          <span class="contenedorNota-bloque">
+            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
+              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
+            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
+            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+          </span>
+
+          <span class="contenedorNota-bloque">
+            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
+              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
+            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
+            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+          </span>
         </span>
       </span>
-      <button class="botonFides fontTexto">VER MÁS</button>
+      <!-- <button class="botonFides fontTexto">VER MÁS</button> -->
     </section>
 
 
