--- a/notas/billeteras-digitales-nueva-regulación-del-bcra-para-prevenir-los-fraudes.html
+++ b/notas/billeteras-digitales-nueva-regulación-del-bcra-para-prevenir-los-fraudes.html
@@ -35,7 +35,7 @@
     <section id="contenidoNota" class="centrado">
       <article class="encabezadoNota fondoGris fontTitulo">
         <span class="contenidoEncabezado w90 mw900 centrado">
-          <span class="encabezdaoNota--copete">Economía y Finanzas</span>
+          <span class="encabezdaoNota--copete">General</span>
           <h1 class="encabezdaoNota--titulo colorDestacado">Billeteras digitales: nueva regulación del BCRA para prevenir los fraudes</h1>
           <span class="encabezdaoNota--fecha">11 de marzo de 2022</span>
         </span>
