--- a/notas/index.html
+++ b/notas/index.html
@@ -39,9 +39,9 @@
             <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
               DEL BCRA PARA PREVENIR LOS FRAUDES</span>
             <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/billeteras-digitales-nueva-regulación-del-bcra-para-prevenir-los-fraudes.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
           </span>
-
+          
           <span class="contenedorNota-bloque">
             <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
               DEL BCRA PARA PREVENIR LOS FRAUDES</span>
