--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
         Publicaciones <span class="colorDestacado">Destacadas</span>
       </span>
       <span id="publicacionesDestacadas--contenido"></span>
-      <button class="botonFides fontTexto" type="button" onclick="location.href='/notas'">VER MÁS</button>
+      <button class="botonFides fontTexto" type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas'">VER MÁS</button>
     </section>
-
     <section id="bloqueContacto">
     </section>
 
