--- a/tendencias/calendario/index.html
+++ b/tendencias/calendario/index.html
@@ -274,7 +274,7 @@
     
 
   <section id="bloqueLinks" class="d-flex w90 mw1080 fontTitulo" data-aos="zoom-out" data-aos-duration="1000">
-    <a href="../../tendencias" class="bloqueLinks-acceso" data-aos="fade-up" data-aos-duration="1000" style="background-image:url('../../images/fondoAccesoTemasInteres.png')">Temas de Interés</a>
+    <a href="../../tendencias" class="bloqueLinks-acceso" data-aos="fade-up" data-aos-duration="1000" style="background-image:url('../../images/fondoAccesoTemasInteres.png')">Tendencias</a>
     <a href="../../profesionales" class="bloqueLinks-acceso" data-aos="fade-up" data-aos-duration="1000" style="background-image:url('../../images/fondoAccesoProfesionales.png')">Profesionales</a>
   </section>
 
