--- a/notas/index.html
+++ b/notas/index.html
@@ -49,10 +49,9 @@
           </span>
 
           <span class="contenedorNota-bloque">
-            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
-              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
-            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> > seguir leyendo</button>
+            <span class="nota-titulo">NUEVA NORMATIVA SOBRE BENEFICIARIOS FINALES</span>
+            <span class="nota-anticipo">La Unidad de Información Financiera (UIF), a través de la emisión de la Resolución No. 112/2021, homogeiniza la definición de Beneficiario Final ... </span>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/nueva-normativa-sobre-beneficiarios-finales.html'" class="nota-seguirLeyendo"> > seguir leyendo</button>
           </span>
 
           <span class="contenedorNota-bloque">
