--- a/contacto/emblue.html
+++ b/contacto/emblue.html
@@ -4,31 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="icon" type="image/png" href="/Imagenes/favicon.ico">
 <title>Formulario vía emBluemail</title>
-<style>
-body, input {font-family: Helvetica, sans-serif; font-size: 12px; font-weight: lighter; color: #777;}
-.cabecera {width: 100%; height:50px; background-color:#3797f7; margin: 0px auto; 
-    text-align:center; font-size:16px; line-height:50px; color:#ffffff;}
-.cuerpo {border-width: 1px; border-color: #e5e5e5; border-style: none solid solid solid; 
-    background-color: #f5f5f5; padding: 25px 0px 30px 0px;}
-.marco {padding: 0 50px 0 50px;}
-.formulario {width: 100%;}
-.formulario tr.campo td { padding: 6px 0; }
-.formulario td p {text-align:right; line-height: 12px; alignment-baseline:middle;
-font-size: 12px !important; font-weight: lighter !important; }
-.formulario input, select { border: solid 1px #999; min-height: 22px; min-width:200px; 
-    line-height: 22px; padding: 0px 5px; color: #999; font-size: 12px; border-radius: 2px; 
-    white-space: nowrap; text-decoration: none; color:#333; margin-left:5px; background-color:#ffffff;
-}
-input[type="submit"] {
-    display: inline-block; border: solid 1px #1c83ea; min-height: 34px; 
-    line-height: 34px; padding: 0px 20px; background-color: #3797f7; color: #FFFFFF; 
-    font-size: 14px; font-weight: 200; border-radius: 3px; white-space: nowrap; 
-    text-decoration: none; margin-top: 20px; }
-.leyenda{padding-top: 15px; text-align: center; font-size: 11px;}
-.leyenda a {color: #3366cc; text-decoration: none; alignment-adjust:central;}
-.txt-cap {text-transform: capitalize;}
-.error { color: #8A0808; font-size: 11px; margin-right: 40px; }
-</style>
 
 
 </head><body><div style="overflow: hidden;">
@@ -91,5 +66,8 @@ input[type="submit"] {
     </div>
 </div>
 
-</div><script type="text/javascript" src="https://app.embluemail.com/emblue/form_validation.js"></script></body>
+</div>
+<script type="text/javascript" src="https://app.embluemail.com/emblue/form_validation.js">
+
+</script></body>
 </html>
