--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -227,7 +227,7 @@
 
   <footer id="bloqueFooter">
   </footer>
-    
+  <script type="text/javascript" src="https://app.embluemail.com/emblue/form_validation.js"></script>
     <script src="" async defer></script>
     <script src="../js/menu.js"></script>
     <script src="../js/profesionales.js"></script>
