--- a/contacto/emblue.html
+++ b/contacto/emblue.html
@@ -4,6 +4,31 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="icon" type="image/png" href="/Imagenes/favicon.ico">
 <title>Formulario vía emBluemail</title>
+<style>
+body, input {font-family: Helvetica, sans-serif; font-size: 12px; font-weight: lighter; color: #777;}
+.cabecera {width: 100%; height:50px; background-color:#3797f7; margin: 0px auto; 
+    text-align:center; font-size:16px; line-height:50px; color:#ffffff;}
+.cuerpo {border-width: 1px; border-color: #e5e5e5; border-style: none solid solid solid; 
+    background-color: #f5f5f5; padding: 25px 0px 30px 0px;}
+.marco {padding: 0 50px 0 50px;}
+.formulario {width: 100%;}
+.formulario tr.campo td { padding: 6px 0; }
+.formulario td p {text-align:right; line-height: 12px; alignment-baseline:middle;
+font-size: 12px !important; font-weight: lighter !important; }
+.formulario input, select { border: solid 1px #999; min-height: 22px; min-width:200px; 
+    line-height: 22px; padding: 0px 5px; color: #999; font-size: 12px; border-radius: 2px; 
+    white-space: nowrap; text-decoration: none; color:#333; margin-left:5px; background-color:#ffffff;
+}
+input[type="submit"] {
+    display: inline-block; border: solid 1px #1c83ea; min-height: 34px; 
+    line-height: 34px; padding: 0px 20px; background-color: #3797f7; color: #FFFFFF; 
+    font-size: 14px; font-weight: 200; border-radius: 3px; white-space: nowrap; 
+    text-decoration: none; margin-top: 20px; }
+.leyenda{padding-top: 15px; text-align: center; font-size: 11px;}
+.leyenda a {color: #3366cc; text-decoration: none; alignment-adjust:central;}
+.txt-cap {text-transform: capitalize;}
+.error { color: #8A0808; font-size: 11px; margin-right: 40px; }
+</style>
 
 
 </head><body><div style="overflow: hidden;">
@@ -16,7 +41,7 @@
             <!--FORMULARIO--> 
             <div class="marco">
             <form method="GET" action="https://app.embluemail.com/Online/TriggerUrlExterna.aspx" onsubmit="return validateForm();" novalidate="">
-            <input type="hidden" name="key" value="ccc44137-0b8c-4849-be62-1a67f4c64e11">
+            <input type="hidden" name="key" value="deb9534c-2d27-4042-adf0-8db58432d3c2">
             <table class="formulario campos">
                 <tbody>
                     <tr class="campo">
@@ -26,22 +51,13 @@
                     <tr class="error-email">
                         <td colspan="2" style="text-align: center;"></td>
                     </tr>
-                
-
-
-
-
-
-
-
-
-<tr id="campo-31824" class="campo">
+                <tr id="campo-1498318" class="campo">
     <td>
-        <p class="txt-cap">Correo&nbsp;<span class="req">&nbsp;</span></p>
+        <p class="txt-cap">mensaje&nbsp;<span class="req">&nbsp;</span></p>
     </td>
-    <td><input id="31824" type="text" name="31824" data-error="Campo requerido|Formato inválido"></td>
+    <td><input id="1498318" type="text" name="1498318" data-error="Campo requerido|Formato inválido"></td>
 </tr>
-<tr class="error-31824">
+<tr class="error-1498318">
     <td colspan="2" style="text-align: center;"></td>
 </tr></tbody>
             </table>
@@ -66,8 +82,5 @@
     </div>
 </div>
 
-</div>
-<script type="text/javascript" src="https://app.embluemail.com/emblue/form_validation.js">
-
-</script></body>
+</div><script type="text/javascript" src="https://app.embluemail.com/emblue/form_validation.js"></script></body>
 </html>
