--- a/index.html
+++ b/index.html
@@ -72,7 +72,29 @@
       <span id="publicacionesDestacadas--contenido"></span>
       <button class="botonFides fontTexto" type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas'">VER MÁS</button>
     </section>
+    
     <section id="bloqueContacto">
+      <span class="w90 mw1080 centrado" data-aos="fade-up" data-aos-duration="1000">
+        <span class="titulo">Dejanos tu mensaje</span>
+          <span class="contenidoForm w90 mw900 centrado fontTexto">
+            <div class="mb-3">
+                <form method="GET" action="https://app.embluemail.com/Online/TriggerUrlExterna.aspx" onsubmit="return validateForm();" novalidate="">
+                    <input type="hidden" name="key" value="deb9534c-2d27-4042-adf0-8db58432d3c2">
+                    <input class="form-control" id="email" type="email" placeholder="miemail@miemail.com" name="email" required="" data-error="Campo requerido|Formato inválido">
+            </div>
+            <div class="mb-3" id="campo-1498318">
+              <input id="1498318" type="text" name="1498318" class="form-control" rows="3" placeholder="Dejanos tu mensaje">
+            </div>
+            <span class="d-flex align-items-center justify-content-between">
+              <span>
+                <input type="checkbox" name="recibir" id="suscribir" value="Quiero suscribirme al newsletter">
+                <label>Quiero suscribirme al newsletter</label>
+              </span>
+              <button type="submit" type="submit" datos="" value="">ENVIAR</button>
+              </form>
+            </span>
+          </span>
+      </span>
     </section>
 
 
@@ -81,12 +103,13 @@
     </footer>
     <script src="js/menu.js"></script>
     <script src="js/publicacionesDestacadas.js"></script>
-    <script src="js/contacto.js"></script>
+    <!-- <script src="js/contacto.js"></script> -->
     <script src="js/footer.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://app.embluemail.com/emblue/form_validation.js"></script>
   </body>
 </html>
