Actualización de notas

--- a/notas/index.html
+++ b/notas/index.html
@@ -39,62 +39,52 @@
             <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
               DEL BCRA PARA PREVENIR LOS FRAUDES</span>
             <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/billeteras-digitales-nueva-regulación-del-bcra-para-prevenir-los-fraudes.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/2022/billeteras-digitales-nueva-regulación-del-bcra-para-prevenir-los-fraudes.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
           </span>
           
           <span class="contenedorNota-bloque">
             <span class="nota-titulo">¿SE DEBERÍA FORMALIZAR UN PLAN DE IMPLEMENTACIÓN DE LA RESOLUCIÓN UIF Nº 112/2021?</span>
             <span class="nota-anticipo">En una nota anterior de mi autoría, publicada con fecha 28.10.2021*, hacía un análisis respecto de los principales aspectos derivados de la emisión... </span>
-            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/se-deberia-formalizar-un-plan-de-implementacion-de-la-resolucion-uif-no-112-2021.html'" class="nota-seguirLeyendo"> > seguir leyendo</button>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/2022/se-deberia-formalizar-un-plan-de-implementacion-de-la-resolucion-uif-no-112-2021.html'" class="nota-seguirLeyendo"> > seguir leyendo</button>
           </span>
 
           <span class="contenedorNota-bloque">
             <span class="nota-titulo">NUEVA NORMATIVA SOBRE BENEFICIARIOS FINALES</span>
             <span class="nota-anticipo">La Unidad de Información Financiera (UIF), a través de la emisión de la Resolución No. 112/2021, homogeiniza la definición de Beneficiario Final ... </span>
-            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/nueva-normativa-sobre-beneficiarios-finales.html'" class="nota-seguirLeyendo"> > seguir leyendo</button>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/2021/nueva-normativa-sobre-beneficiarios-finales.html'" class="nota-seguirLeyendo"> > seguir leyendo</button>
           </span>
 
           <span class="contenedorNota-bloque">
-            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
-              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
-            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+            <span class="nota-titulo">ACTUALIZACIÓN DE LA ESCALA DE MULTAS DEL REGIMEN PENAL ADMINISTRATIVO</span>
+            <span class="nota-anticipo">El artículo 24 de la Ley No. 25.246[*] y modificatorias establece los montos de las multas que puede aplicar la Unidad de Información Financiera ... </span>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/2021/actualizacion-de-la-escala-de-multas-del-regimen-penal-administrativo.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
           </span>
 
           <span class="contenedorNota-bloque">
-            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
-              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
-            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+            <span class="nota-titulo">REVISIÓN INDEPENDIENTE PARA LOS PROVEEDORES NO FINANCIEROS DE CRÉDITOS: DESAFÍOS Y OPORTUNIDADES</span>
+            <span class="nota-anticipo">Mg. Guillermo Zocco Vidal. La figura del Revisor Independiente y la exigencia de un Informe emitido por el mismo, aporta un grado relevante de control ... </span>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/2021/revision-independiente-para-los-proveedores-no-financieros-de-creditos-desafios-y-oportunidades.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
           </span>
 
           <span class="contenedorNota-bloque">
-            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
-              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
-            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+            <span class="nota-titulo">MAYORES RECAUDOS PARA LA TRANSPARENCIA EN EL USO DE LAS BILLETERAS DIGITALES</span>
+            <span class="nota-anticipo">El pasado 12 de julio el Banco Central de la República Argentina emitió la Comunicación A 7328, la cual representa un paso más en el objetivo trazado por dicha ... </span>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/2021/mayores-recaudos-para-la-transparencia-en-el-uso-de-las-billeteras-digitales.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
           </span>
 
           <span class="contenedorNota-bloque">
-            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
-              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
-            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+            <span class="nota-titulo">AUTOEVALUACIÓN DE RIESGOS DE LA Y FT – UNA MIRADA INTEGRAL BAJO UN NUEVO ESCENARIO DE VIRTUALIDAD</span>
+            <span class="nota-anticipo">Esta columna analiza los desafíos que enfrentan los sujetos obligados que realizarán sus Autoevaluaciones de Riesgos de LA y FT en el nuevo escenario de virtualidad ... </span>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/2021/autoevaluacion-de-riesgos-de-la-y-ft-una-mirada-integral-bajo-un-nuevo-escenario-de-virtualidad.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
           </span>
 
           <span class="contenedorNota-bloque">
-            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
-              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
-            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
+            <span class="nota-titulo">EL VALOR AGREGADO DEL REI COMO PUNTO DE PARTIDA DE LA SUPERVISIÓN DE UN REGULADOR</span>
+            <span class="nota-anticipo">“Cada Entidad deberá solicitar a un Revisor Externo Independiente, con experticia acreditada en la materia, la emisión de un informe anual que se pronuncie sobre ... </span>
+            <button type="button" onclick="location.href='https://alvaroguzmandg.github.io/fidesNet/notas/2021/el-valor-agregado-del-rei-como-punto-de-partida-de-la-supervision-de-un-regulador.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
           </span>
 
-          <span class="contenedorNota-bloque">
-            <span class="nota-titulo">BILLETERAS DIGITALES: NUEVA REGULACIÓN
-              DEL BCRA PARA PREVENIR LOS FRAUDES</span>
-            <span class="nota-anticipo">El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel... </span>
-            <button type="button" onclick="location.href='../notas/template.html'" class="nota-seguirLeyendo"> >seguir Leyendo</button>
-          </span>
+
         </span>
       </span>
       <!-- <button class="botonFides fontTexto">VER MÁS</button> -->
