--- a/tendencias/calendario/index.html
+++ b/tendencias/calendario/index.html
@@ -180,7 +180,6 @@
     <section class="contenedor-calendario w90 mw900 d-flex flex-column">
       <div class="tituloCalendario fontTitulo mb-3">
         Sistema Integral de Prevención del Lavado de Activos – SIPLA
-
       </div>
       <div class="table-responsive">
         <table class="table align-middle align-items-center">
@@ -201,8 +200,7 @@
               <td>
                 Información al 31.12: <span class="fw-700 colorDestacado">15.2</span>
               </td>
-                <br>
-                Información al 30.06: <span class="fw-700 colorDestacado">15.8</span>
+                
               </td>
               </td>
               <td>
@@ -217,7 +215,6 @@
               <td class="fw-700 colorDestacado">Anual</td>
               <td>
                 Información al 30.06: <span class="fw-700 colorDestacado">15.8</span>
-              </td>
               </td>
               <td>
                 Información período 2022: <strong>Vto. 28.02.2023</strong>
@@ -239,20 +236,16 @@
                 Últimos Informes presentados a la UIF en el período 2022: <strong>Vto. 31.01.2023</strong>
               </td>
             </tr>
-
             <tr>
               <td>
                 OFICIALES DE CUMPLIMIENTO
               </td>
-              <td class="fw-700 colorDestacado">5 días hábiles desde la designación de los OC Titular o Suplente o de cualquier cambio en la información.
-              </td>
-              <td>
+              <td colspan="2" class="fw-700 colorDestacado">5 días hábiles desde la designación de los OC Titular o Suplente o de cualquier cambio en la información.
               </td>
               <td>
                 Primera presentación informando los Oficiales de Cumplimiento: <strong>Vto. 31.01.2023</strong>
               </td>
             </tr>   
-            
             <tr>
               <td>
                 TIPOLOGÍAS DE LA/FT
@@ -261,9 +254,6 @@
               </td>
               <td>
                 Información al 31.12: <span class="fw-700 colorDestacado">15.2</span>
-              </td>
-                <br>
-                Información al 30.06: <span class="fw-700 colorDestacado">15.8</span>
               </td>
               <td>
                 Las tipologías de los periodos 2020/01 a 2022/01, se deben cargar conforme con los ROS informados en el módulo “Datos del Sistema”:<strong>Vto. 28.02.2023</strong>
