--- a/notas/template.html
+++ b/notas/template.html
@@ -42,6 +42,13 @@
       </article>
 
       <article class="textoNota fontTexto w90 mw900 centrado">
+
+        <p class="fontEncabezadoNota"></p>
+        <p class="colorDestacado"></p>
+        <p class="pl"></p>
+        <p class="colorDestacado fs-5"><strong>Mg. Andres Kores</strong>
+        <span class="d-block colorTexto">Socio de FIDESnet</p>
+
         <p>El pasado 24 de febrero el Banco Central de la República Argentina (BCRA) emitió la Com. A 7463 en la que establece un conjunto de reglas para fortalecer el nivel de seguridad de las billeteras digitales y ofrecer un mayor nivel de confianza a los usuarios de éstas.</p>
 
         <p>Recordemos que el BCRA ha comenzado a regular a los Proveedores de Servicios de Pagos (PSP) a principios del 2020 con la Com A 6859 y desde entonces ha emitido comunicaciones tendientes a fortalecer el ecosistema de medios de pagos y dotar de mayor transparencia y seguridad a las operaciones que realizan los PSP.</p>
